# vton

./: .gitignore  README.md  autoencodeur.ipynb  generateur_images.ipynb  main.py  org.py  pyproject.toml  requirements.txt
common_utils/: image_dataset.py
configs/: config_autoencodeur.toml  config_scm.toml  config_vae.toml
julen/: autoencoder.ipynb
laure/: autoencoder_laure.ipynb
laure_bis/: autoencoder.ipynb  cats.ipynb  cats_autoencoder.py  lib_refiner_autoencoder.py  refiner_autoencoder.ipynb
laure_f/: autoencoder_laure.ipynb  cats.ipynb  lib_refiner_autoencoder.py  refiner_autoencoder.ipynb  transformer_autoencoder.ipynb
laure_f/wandb/: latest-run
laure_f/wandb/run-20231116_163702-s0dl0f7k/: run-s0dl0f7k.wandb
laure_f/wandb/run-20231116_163702-s0dl0f7k/files/: config.yaml  wandb-metadata.json  wandb-summary.json
laure_f/wandb/run-20231116_171255-efqvuydb/: run-efqvuydb.wandb
laure_f/wandb/run-20231116_171255-efqvuydb/files/: config.yaml  wandb-metadata.json  (+1 more)
laure_f/wandb/run-20231116_171500-buje57z0/: run-buje57z0.wandb
notebooks/: autoencoder_cats_training.ipynb  autoencodeur.py  load_cats_dataset.py  test.ipynb  vae_vton.ipynb
ramp_up/scripts/: load_cats_dataset.py  training_autoencoder.py
ramp_up/src/: autoencoder.py  autoencoder_trainer.py
scm/configs/: config_scm.toml
scm/notebooks/: misc.ipynb  test_nafnet.ipynb
scm/scripts/: inference.py  mapping_dict.json  training_scm.py  validate_implementation.py
scm/src/: __init__.py  dataset.py  scm.py  scm_trainer.py
scm/src/datasets/: image_dataset.py
scripts/: training.py  training_autoencoder.py  training_scm.py  training_vae.py
src/: autoencoder_trainer.py  autoencodeur_trainer.py  image_dataset.py  scm.py  vae.py  vae_trainer.py
src/datasets/: dataset.py
src/models/: architecture_utils.py  autoencoder.py  dataset.py  nafnet.py  scm.py  scm_from_article.py  vae.py
src/trainer/: autoencoder_trainer.py  scm_trainer.py  vae_trainer.py
src/utils/: metrics.py
src/vton/datamodel/: image_dataset.py
src/vton/model/: autoencodeur.py
src/vton/training_utils/: autoencodeur_trainer.py
vae/: config_vae.toml  training_vae.py
vae/src/: vae.py  vae_trainer.py
(+4 files in other folders)
